update user interaction

--- a/Photo Map/Base.lproj/Main.storyboard
+++ b/Photo Map/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OYn-ZZ-dKd">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </mapView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" translatesAutoresizingMaskIntoConstraints="NO" id="zE6-1S-Ev1">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" translatesAutoresizingMaskIntoConstraints="NO" id="zE6-1S-Ev1">
                                 <rect key="frame" x="155" y="582" width="65" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="65" id="PXI-hw-Ocf"/>
